--- a/Package.nuspec
+++ b/Package.nuspec
@@ -19,6 +19,7 @@
       <dependency id="MongoDB.Driver" version="2.4.4" />
       <dependency id="MongoDB.Driver.Core" version="2.4.4" />
       <dependency id="MongoDB.Bson" version="2.4.4" />
+      <dependency id="Newtonsoft.Json" version="10.0.3" />
     </dependencies>
   </metadata>
   <files>
